client/src/App.css
@font-face {
  font-family: "Billabong";
  src: url("/fonts/Billabong.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "billabongregular";
  src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot");
  src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot?#iefix")
      format("embedded-opentype"),
    url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.woff")
      format("woff"),
    url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.ttf")
      format("truetype"),
    url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.svg#billabongregular")
      format("svg");
  font-weight: normal;
  font-style: normal;
}

:root {
  --form-input-size: 1.6rem;
  --form-placeholder-size: 1.3rem;

  --color-primary: #55c57a;
  --color-primary-light: #7ed56f;
  --color-primary-damp: #3bac60;
  --color-primary-dark: #28b485;

  --color-secondary-light: #ffb900;
  --color-secondary-dark: #ff7730;
  --color-tertiary: #2998ff;
  --color-tertiary-light: #228be6;
  --color-tertiary-extra-light: #7ebbf0;
  --color-tertiary-dark: #1c7ed6;
  --color-tertiary-dark--1: #006ec9;
  --color-tertiary-dark--2: #3e7aeb;

  --color-purple-dark: #5643fa;

  --color-bg-calm-1: #f8f9fa;

  --color-grey-light-1: #f7f7f7;
  --color-grey-light-2: #eee;
  --color-grey-light-3: #e9e9e9;
  --color-grey-light-4: #e0e0e0;
  --color-input-border-1: #dee2e6;
  --color-input-border-2: #cfcfcf;
  --color-input-border-3: #ccc;
  --color-grey-dark-1-unfocused: rgb(153, 153, 153, 0.4);
  --color-grey-dark-1: #999;
  --color-grey-dark-2: #777;
  --color-grey-dark-3: #555;
  --color-grey-dark-4: #3f3f3f;
  --color-grey-dark-6: #6c757d;

  --color-grey-dark-5: #2f2f2f;
  --color-blue-dark-1: #495057;
  --color-white: #fff;
  --color-black: #000;
  --color-black--1: #1c1b1b;
  --color-black--2: #1a1717;

  --color-danger--1-unfocused: rgb(217, 83, 79, 0.4);
  --color-danger--1: #d9534f;

  --shadow-light-1: rgba(0, 0, 0, 0.22);

  --gradient-primary--1: linear-gradient(
    130deg,
    var(--color-primary-light) 0%,
    var(--color-primary-dark) 100%
  );
  --gradient-primary--2: linear-gradient(
    130deg,
    var(--color-primary) 0%,
    var(--color-primary-light) 60%,
    var(--color-primary-dark) 100%
  );

  --gradient-secondary--1: linear-gradient(
    130deg,
    var(--color-secondary-light) 0%,
    var(--color-secondary-dark) 100%
  );

  --nav-height: 80px;
  --nav-active-height: 4px;
  --nav-active-width: 4px;
  --nav-x-padding: 30px;
  --nav-gradient: linear-gradient(
    90deg,
    var(--color-black--1) 0%,
    var(--color-black--2) 100%
  );

  /* --gradient-secondary--2: linear-gradient(
      130deg,
      var(--color-secondary) 0%,
      var(--color-secondary-light) 60%,
      var(--color-secondary-dark) 100%
    ); */
}

* {
  /* font-family: "PT Sans", sans-serif; */
  font-family: "Montserrat", sans-serif;
}

/* Fix for Font Awesome */
.fas {
  font-family: "Font Awesome 5 Free" !important;
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;
}

body {
  box-sizing: border-box;
  background-color: var(--color-grey-dark-4);
  background: var(--color-bg-calm-1);
}

.app {
  position: relative;
  z-index: 4;
}
/* React widgets */
.rw-datepicker-label {
  padding-left: 0.6rem;
}

.rw-datetime-picker,
.rw-widget {
  font-size: 1.5rem !important;
  margin-right: -0.4rem;
  margin-left: 0.6rem;
}

.rw-widget-input,
.rw-input {
  height: 47px;
  width: 100%;
  border-radius: 4px;
  outline: none;
  font-size: var(--form-input-size);
  color: var(--color-blue-dark-1);
  font-family: "Montserrat", sans-serif;
}

.rw-widget-input::placeholder,
.rw-input::placeholder,
.rw-widget-input.rw-input::placeholder {
  font-size: var(--form-placeholder-size);
  font-weight: 400;
  color: var(--color-grey-dark-1);
  font-family: "Montserrat", sans-serif;
}

.rw-widget-container > .rw-input.rw-widget-input {
  height: 47px;
}

.btn {
  padding: 8px 20px;
  border-radius: 4px;
  outline: none;
  border: none;
  cursor: pointer;
  font-size: 1.8rem;
}

.btn.disabled,
.btn:disabled,
.btn.btn--tertiary.disabled,
.btn.btn--tertiary:disabled,
.btn--primary-outline.disabled,
.btn--primary-outline:disabled {
  background: var(--color-grey-dark-2);
  border-color: var(--color-grey-dark-2);
  color: var(--color-white);
  cursor: default;
}

.btn.btn--tertiary {
  color: var(--color-white);
  background-color: var(--color-tertiary);
  transition: all 0.2s ease-in;
}

.btn.btn--tertiary:not(.disabled):not(:disabled):hover {
  background: var(--color-tertiary-dark);
}
.btn.btn--tertiary:not(.disabled):not(:disabled):active {
  background: var(--color-tertiary-dark--1);
}

.btn.btn--primary {
  color: var(--color-white);
  background: var(--color-primary-light);
  transition: background-color 0.2s ease-out;
  border-radius: 4px;
  padding: 0.5rem 1rem;
}
.btn.btn--primary:hover {
  background: var(--color-primary);
}
.btn.btn--primary:active {
  background: var(--color-primary-damp);
}

.btn.btn--primary-outline {
  color: var(--color-white);
  background-color: var(--color-primary);
  transition: all 0.3s ease-out;
  border: 2px solid transparent;
}

.btn.btn--primary-outline:not(.disabled):not(:disabled):hover {
  background-color: transparent;
  color: var(--color-white);
  border: 2px solid var(--color-primary);
}
.btn.btn--primary-outline:not(.disabled):not(:disabled):active {
  transform: scale(0.992);
  -webkit-transform: scale(0.992);
  /* transform: translateY(1px) scale(.99); */
}

/* 
  --------------------------
  ---------- Form ----------
  -------------------------- 
  */
.form-title {
  color: var(--color-blue-dark-1);
  font-size: 3.4rem;
  margin-bottom: 1rem;
  /* border-bottom: 1px solid var(--color-input-border-1); */
}

.form-item.form--mb1.form-item--no-margin,
.form-item.form--mb1,
.form--mb1 {
  margin-bottom: 1rem;
}
.form--mb0 {
  margin-bottom: 0;
}

.form-form-wrapper {
  max-width: 400px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  padding: 20px 40px;
  border-radius: 10px;
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px var(--shadow-light-1);
  /* box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px var(--color-grey-dark-3); */
  /* box-shadow: 0px 10px 50px var(--color-grey-dark-3); */
  background-color: var(--color-white);
}

.form-form {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.form-centered-container {
  min-height: calc(100vh - var(--nav-height));
  overflow: auto;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Center nicer for mobile */
@media screen and (max-width: 960px) {
  /* with align-mobile class */
  .form-centered-container {
    /* margin-top: calc(-1 * var(--nav-height));
    height: 100vh; */
  }
}

.form-centered-container > *,
.form-centered-container > * > *,
.form-centered-container > * > * > *,
.form-centered-container > * > * > * > * {
  font-family: "Montserrat", sans-serif;
}

.form-description {
  text-align: left;
  width: 100%;
}

.form-switch {
  width: 100%;
  text-align: right;
  padding-right: 0.9rem;
}

.form-switch-action {
  text-decoration: none;
  color: var(--color-grey-dark-1);
  font-weight: 700;
}

.form-switch-action:hover {
  color: var(--color-primary-light);
}

.form-item {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin: 0.6rem;
}

.form-item.form-item--no-margin {
  margin: 0;
}

.form-item--row {
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.form-item .form-item__multiline-label {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.form-item .form-item__multiline-label .form-item__multiline-label-description {
  font-size: 1rem;
}

.form-item p,
.form-item label {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: var(--color-blue-dark-1);
}

.form-item label {
  font-size: 1.8rem;
  font-weight: 500;
}

.form-item label.optional::after,
.form-item p.optional::after {
  align-self: flex-end;
  margin-left: 5px;
  font-style: italic;
  content: "(optional)";
  font-size: 1rem;
  color: var(--color-secondary-dark);
}
.form-item label.required::after,
.form-item p.required::after {
  align-self: flex-end;
  margin-left: 5px;
  font-style: italic;
  content: "(required)";
  font-size: 1rem;
  color: var(--color-secondary-dark);
}
.form-item__submit {
  height: 5.5rem;
  margin-top: 1rem;
}

.form-item__input {
  height: 47px;
  width: 100%;
  padding: 1rem;
  border-radius: 4px;
  outline: none;
  border: 2px solid var(--color-input-border-1);
  font-size: var(--form-input-size);
  color: var(--color-blue-dark-1);
  font-family: "Montserrat", sans-serif;
  margin-right: -3.25rem;
  padding-right: 3.4rem;
}

.form-item__input:focus {
  border-color: #4dabf7;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.0125),
    0 0 8px rgba(34, 139, 230, 0.5);
}

.form-item__input--textarea {
  min-height: 7rem;
  resize: vertical;
}

/* Font Awesome Icon inside input */
.form-item-wrapper .form-item__input[type="text"]:before {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.form-item .form-item__input::placeholder {
  font-size: var(--form-placeholder-size);
  font-weight: 400;
  color: var(--color-grey-dark-1);
}

.form-item__input-icon {
  font-size: 1.5rem;
  color: var(--color-grey-dark-1);
}

.form-item__input-remove {
  font-size: 1.5rem;
  color: var(--color-danger--1-unfocused);
  transition: color 0.2s ease-out;
}
.form-item-wrapper:hover .form-item__input-remove {
  color: var(--color-danger--1);
}

.form-item__input-remove:hover {
  cursor: pointer;
}

.form-item .form-item__input.form-item__input--err {
  border: 1px solid var(--color-danger--1);
}

.form-item .form-item__error {
  color: var(--color-danger--1);
}

.form-item__error {
  color: var(--color-danger--1);
  font-size: 1.4rem;
}

/* 
  ----------------------------
  ---------- Mobile ----------
  ---------------------------- 
  */
@media screen and (min-width: 961px) {
  .mobile-only {
    display: none;
  }
}

@media screen and (max-width: 960px) {
  .desktop-only {
    display: none;
  }
}

